@@ -1,6 +1,12 @@
 2001-10-30  Cristy  <cristy@mystic.es.dupont.com>
 	* Added support for On-the-air bitmap.
 
+2001-09-29  Glenn  <glennrp@home.kom>
+        * When the delay setting for an image is greater than 5cs,
+          duplicate frames are inserted to achieve the desired delay
+          while creating MPEG files (contributed by Lawrence Livermore
+          National Laboratory (LLNL)).
+
 2001-10-29  Cristy  <cristy@mystic.es.dupont.com>
 	* ImageMagick now has a registry for storing image blobs.
 
